--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ env:
 - TOXENV=py27
 - TOXENV=flake8
 
-install: pip install -U tox
+install:
+- pip install -U tox
+- pip install numpy
 
 script: tox -e ${TOXENV}
 
