--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,8 @@ deps=flake8
 commands=flake8 superdeduper
 
 [testenv]
-install_command = pip install numpy && pip install {opts} {packages}
+install_command = pip install numpy ;; pip install {opts} {packages}
 commands =
-    pip install -U pip
-    pip install numpy
     pip install -r {toxinidir}/requirements_dev.txt
     py.test --basetemp={envtmpdir}
 setenv =
