--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,10 @@ deps=flake8
 commands=flake8 superdeduper
 
 [testenv]
-install_command = pip install numpy ;; pip install {opts} {packages}
+install_command = pip install numpy
+;;                pip install {opts} {packages}
 commands =
-    pip install -r {toxinidir}/requirements_dev.txt
+    pip install {opts} {packages}
     py.test --basetemp={envtmpdir}
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/superdeduper
