--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,8 @@ deps=flake8
 commands=flake8 superdeduper
 
 [testenv]
-install_command = pip install numpy
-;;                pip install {opts} {packages}
+install_command = pip install {opts} numpy {packages}
 commands =
-    pip install {opts} {packages}
     py.test --basetemp={envtmpdir}
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/superdeduper
