Install numpy via travis?

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ env:
 
 install: pip install -U tox
 
-script: tox -v -e ${TOXENV}
+script:
+- pip install numpy
+- tox -v -e ${TOXENV}
 
 deploy:
   true:
