Try using a custom script for install_command

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ env:
 
 install: pip install -U tox
 
-script:
-- pip install numpy
-- tox -v -e ${TOXENV}
+script: tox -e ${TOXENV}
 
 deploy:
   true:
