--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps=flake8
 commands=flake8 superdeduper
 
 [testenv]
-install_command = bash pip_numpy_first.sh install {opts} {packages}
+install_command = bash {toxinidir}/pip_numpy_first.sh install {opts} {packages}
 commands =
     py.test --basetemp={envtmpdir}
 setenv =
